--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -16,7 +16,7 @@
 				href="https://vhmblog102.000webhostapp.com/"
 				target="_blank"
 			>
-				<img src="./libraries/images/logo_favicon/logo.jpg" alt="logo - VHM" />
+				<img src="./libraries/images/logo_favicon/logo.png" alt="logo - VHM" />
 			</a>
 		</div>
 		<div class="col-sm-3 no-padding">
