--- a/src/public/libraries/css/auth.css
+++ b/src/public/libraries/css/auth.css
@@ -1,408 +1,385 @@
-/*
- *
- * login-register modal css
- * https://trungquandev.com
- *
-/*  Shake animation  */
-
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600);
 
 /* @charset "UTF-8"; */
 
 body {
-  /*position: fixed;*/
-  /*width: 100%;*/
-  height: 100vh;
-  /* #f8f8f8 */
-  background-color: #333333; 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 400;
-  /* background-image: url("../images/background/image.jpg"); */
-  /* background-size: cover;
-  background-repeat: none; */
-  color: #fff;
+	height: 100vh;
+	background-color: #333333;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeLegibility;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 400;
+	color: #fff;
 }
 
 .container {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(10, 61, 98,.5);
-  background-blend-mode: screen;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(10, 61, 98, 0.5);
+	background-blend-mode: screen;
 }
 
-.bg-video{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .3;
+.bg-video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0.3;
 	z-index: -1;
 }
-.bg-video-content{
+.bg-video-content {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
 .my-content {
-  margin-top: 80px;
+	margin-top: 80px;
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    position: static;
-  }
+	body {
+		position: static;
+	}
 }
 
 .modal-title {
-  color: #2c3e50;
+	color: #2c3e50;
 }
 
 hr {
-  width: 80%;
+	width: 80%;
 }
 
 .login-title {
-  font-size: 52px;
+	font-size: 52px;
 }
 
 .table a {
-  color: #fff;
+	color: #fff;
 }
-.big-login{
+.big-login {
 	margin: 0 5px 0 10px;
 }
-.my-table>tbody>tr>td {
-  border-top: 0px;
-  font-size: 15px;
+.my-table > tbody > tr > td {
+	border-top: 0px;
+	font-size: 15px;
 }
 
 .bottom-description {
-  margin-top: 30px;
-  font-size: 15px;
-  font-style: italic;
+	margin-top: 30px;
+	font-size: 15px;
+	font-style: italic;
 }
 
 .animated {
-  -webkit-animation-duration: 1s;
-  -moz-animation-duration: 1s;
-  -o-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  -moz-animation-fill-mode: both;
-  -o-animation-fill-mode: both;
-  animation-fill-mode: both;
+	-webkit-animation-duration: 1s;
+	-moz-animation-duration: 1s;
+	-o-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	-moz-animation-fill-mode: both;
+	-o-animation-fill-mode: both;
+	animation-fill-mode: both;
 }
 
 .animated.hinges {
-  -webkit-animation-duration: 2s;
-  -moz-animation-duration: 2s;
-  -o-animation-duration: 2s;
-  animation-duration: 2s;
+	-webkit-animation-duration: 2s;
+	-moz-animation-duration: 2s;
+	-o-animation-duration: 2s;
+	animation-duration: 2s;
 }
 
 .animated.slow {
-  -webkit-animation-duration: 3s;
-  -moz-animation-duration: 3s;
-  -o-animation-duration: 3s;
-  animation-duration: 3s;
+	-webkit-animation-duration: 3s;
+	-moz-animation-duration: 3s;
+	-o-animation-duration: 3s;
+	animation-duration: 3s;
 }
 
 .animated.snail {
-  -webkit-animation-duration: 4s;
-  -moz-animation-duration: 4s;
-  -o-animation-duration: 4s;
-  animation-duration: 4s;
+	-webkit-animation-duration: 4s;
+	-moz-animation-duration: 4s;
+	-o-animation-duration: 4s;
+	animation-duration: 4s;
 }
 
 @-webkit-keyframes shake {
-  0%,
-  100% {
-    -webkit-transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    -webkit-transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    -webkit-transform: translateX(10px);
-  }
+	0%,
+	100% {
+		-webkit-transform: translateX(0);
+	}
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		-webkit-transform: translateX(-10px);
+	}
+	20%,
+	40%,
+	60%,
+	80% {
+		-webkit-transform: translateX(10px);
+	}
 }
 
 @-moz-keyframes shake {
-  0%,
-  100% {
-    -moz-transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    -moz-transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    -moz-transform: translateX(10px);
-  }
+	0%,
+	100% {
+		-moz-transform: translateX(0);
+	}
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		-moz-transform: translateX(-10px);
+	}
+	20%,
+	40%,
+	60%,
+	80% {
+		-moz-transform: translateX(10px);
+	}
 }
 
 @-o-keyframes shake {
-  0%,
-  100% {
-    -o-transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    -o-transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    -o-transform: translateX(10px);
-  }
+	0%,
+	100% {
+		-o-transform: translateX(0);
+	}
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		-o-transform: translateX(-10px);
+	}
+	20%,
+	40%,
+	60%,
+	80% {
+		-o-transform: translateX(10px);
+	}
 }
 
 @keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
+	0%,
+	100% {
+		transform: translateX(0);
+	}
+	10%,
+	30%,
+	50%,
+	70%,
+	90% {
+		transform: translateX(-10px);
+	}
+	20%,
+	40%,
+	60%,
+	80% {
+		transform: translateX(10px);
+	}
 }
 
 .shake {
-  -webkit-animation-name: shake;
-  -moz-animation-name: shake;
-  -o-animation-name: shake;
-  animation-name: shake;
+	-webkit-animation-name: shake;
+	-moz-animation-name: shake;
+	-o-animation-name: shake;
+	animation-name: shake;
 }
 
 .login .modal-dialog {
-  width: 500px;
+	width: 500px;
 }
 
 .login .modal-footer {
-  border-top: 0;
-  margin-top: 0px;
-  padding: 10px 20px 20px;
+	border-top: 0;
+	margin-top: 0px;
+	padding: 10px 20px 20px;
 }
 
 .login .modal-header {
-  border: 0 none;
-  padding: 15px 15px 15px;
+	border: 0 none;
+	padding: 15px 15px 15px;
 }
 
 .login .division {
-  float: none;
-  margin: 0 auto 18px;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  width: 100%;
+	float: none;
+	margin: 0 auto 18px;
+	overflow: hidden;
+	position: relative;
+	text-align: center;
+	width: 100%;
 }
 
 .login .division .line {
-  border-top: 1px solid #DFDFDF;
-  position: absolute;
-  top: 10px;
-  width: 34%;
+	border-top: 1px solid #dfdfdf;
+	position: absolute;
+	top: 10px;
+	width: 34%;
 }
 
 .login .division .line.l {
-  left: 0;
+	left: 0;
 }
 
 .login .division .line.r {
-  right: 0;
+	right: 0;
 }
 
 .login .division span {
-  color: #424242;
-  font-size: 17px;
+	color: #424242;
+	font-size: 17px;
 }
 
 .login .box .social {
-  float: none;
-  margin: 0 auto 30px;
-  text-align: center;
+	float: none;
+	margin: 0 auto 30px;
+	text-align: center;
 }
 
 .login .social .circle {
-  background-color: #EEEEEE;
-  color: #FFFFFF;
-  border-radius: 100px;
-  display: inline-block;
-  margin: 0 17px;
-  padding: 15px;
+	background-color: #eeeeee;
+	color: #ffffff;
+	border-radius: 100px;
+	display: inline-block;
+	margin: 0 17px;
+	padding: 15px;
 }
 
 .login .social .circle .fa {
-  font-size: 16px;
+	font-size: 16px;
 }
 
 .login .social .facebook {
-  background-color: #455CA8;
-  color: #FFFFFF;
+	background-color: #455ca8;
+	color: #ffffff;
 }
 
 .login .social .google {
-  background-color: #F74933;
+	background-color: #f74933;
 }
 
 .login .social .github {
-  background-color: #403A3A;
+	background-color: #403a3a;
 }
 
 .login .facebook:hover {
-  background-color: #6E83CD;
+	background-color: #6e83cd;
 }
 
 .login .google:hover {
-  background-color: #FF7566;
+	background-color: #ff7566;
 }
 
 .login .github:hover {
-  background-color: #4D4D4d;
-  ;
+	background-color: #4d4d4d;
 }
 
 .login .forgot {
-  color: #797979;
-  margin-left: 0;
-  overflow: hidden;
-  text-align: center;
-  width: 100%;
+	color: #797979;
+	margin-left: 0;
+	overflow: hidden;
+	text-align: center;
+	width: 100%;
 }
 
 .login .btn-login,
 .registerBox .btn-register {
-  /* background-color: #00BBFF; */
-  /* border-color: #00BBFF; */
-  background-color: #81ecec;
-  border-color: #81ecec;
-  border-width: 0;
-  color: #FFFFFF;
-  display: block;
-  margin: 0 auto;
-  padding: 15px 50px;
-  text-transform: uppercase;
-  width: 100%;
+	background-color: #81ecec;
+	border-color: #81ecec;
+	border-width: 0;
+	color: #ffffff;
+	display: block;
+	margin: 0 auto;
+	padding: 15px 50px;
+	text-transform: uppercase;
+	width: 100%;
 }
 
 .login .btn-login:hover,
 .registerBox .btn-register:hover {
-  /* background-color: #00A4E4; */
-  background-color: #70d2d2;
-  color: #FFFFFF;
+	background-color: #70d2d2;
+	color: #ffffff;
 }
 
 .login .form-control {
-  border-radius: 3px;
-  background-color: rgba(0, 0, 0, 0.09);
-  box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset;
-  color: #FFFFFF;
+	border-radius: 3px;
+	background-color: rgba(0, 0, 0, 0.09);
+	box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset;
+	color: #ffffff;
 }
 
 .login .form-control:hover {
-  background-color: rgba(0, 0, 0, .16);
+	background-color: rgba(0, 0, 0, 0.16);
 }
 
 .login .form-control:focus {
-  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset;
-  background-color: rgba(0, 0, 0, 0.23);
-  color: #FFFFFF;
+	box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset;
+	background-color: rgba(0, 0, 0, 0.23);
+	color: #ffffff;
 }
 
-.login .box .form input[type="text"],
-.login .box .form input[type="password"] {
-  border-radius: 3px;
-  border: none;
-  color: #333333;
-  font-size: 16px;
-  height: 46px;
-  margin-bottom: 5px;
-  padding: 13px 12px;
-  width: 100%;
+.login .box .form input[type='text'],
+.login .box .form input[type='password'] {
+	border-radius: 3px;
+	border: none;
+	color: #333333;
+	font-size: 16px;
+	height: 46px;
+	margin-bottom: 5px;
+	padding: 13px 12px;
+	width: 100%;
 }
 
-@media (max-width:400px) {
-  .login .modal-dialog {
-    width: 100%;
-  }
+@media (max-width: 400px) {
+	.login .modal-dialog {
+		width: 100%;
+	}
 }
 
 .big-login,
 .big-register {
-  /* background-color: #00bbff; */
-  background: #00cec9;
-  color: #FFFFFF;
-  border-radius: 7px;
-  border-width: 2px;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 200;
-  padding: 12px 40px;
-  text-transform: uppercase;
-  transition: all 0.3s ease 0s;
+	background: #00cec9;
+	color: #ffffff;
+	border-radius: 7px;
+	border-width: 2px;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 200;
+	padding: 12px 40px;
+	text-transform: uppercase;
+	transition: all 0.3s ease 0s;
 }
 
 .big-login:hover {
-  /* background-color: #00A4E4; */
-  background-color: #6ddad8;
-  color: #FFFFFF;
+	background-color: #6ddad8;
+	color: #ffffff;
 }
 
 .big-register {
-  background-color: rgba(0, 0, 0, .0);
-  /* color: #00bbff; */
-  /* border-color: #00bbff; */
-  border-color: #00cec9;
-  color: #00cec9
+	background-color: rgba(0, 0, 0, 0);
+	border-color: #00cec9;
+	color: #00cec9;
 }
 
 .big-register:hover {
-  /* border-color: #00A4E4; */
-  /* color: #00A4E4; */
-  border-color: #45a7a5;
-  color: #45a7a5;
+	border-color: #45a7a5;
+	color: #45a7a5;
 }
 
 label {
-  color: #7f8c8d;
-  margin-bottom: 7px !important;
-  margin-top: 4px !important;
+	color: #7f8c8d;
+	margin-bottom: 7px !important;
+	margin-top: 4px !important;
 }
 
 .alert {
-  padding: 12px;
-  margin-bottom: 10px;
+	padding: 12px;
+	margin-bottom: 10px;
 }
