--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-		<link rel="shortcut icon" href="./libraries/images/logo_favicon/logo.jpg" />
+		<link rel="shortcut icon" href="./libraries/images/logo_favicon/icon.png" />
 		<link
 			rel="stylesheet"
 			href="./libraries/bower_components/bootstrap/dist/css/bootstrap.css"
